--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -81,7 +81,7 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
-    font-family: "CMU Sans Serif", "Helvetica Neue", "Arial", "Helvetica"
+    font-family: "Computer Modern Sans", "Helvetica Neue", "Arial", "Helvetica"
 }
 
 
