--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: "CMU Serif", "Helvetica Neue", Arial, Helvetica;
+$base-font-family: "Computer Modern Serif", "Helvetica Neue", Arial, Helvetica;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
