--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -175,7 +175,7 @@
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit;
+        margin-bottom: $spacing-unit / 4;
     }
 }
 
@@ -186,7 +186,6 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
 }
 
 
